--- a/index.html
+++ b/index.html
@@ -3,21 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>dynamic-dev</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Robin DIJOUX | Portfolio</title>
+    <meta name="description" content="Welcome to my portfolio! Explore my projects, skills, and experiences. Let's connect and collaborate!" />
+    <meta name="author" content="Robin DIJOUX & Lovable" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="dynamic-dev" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Robin DIJOUX | Portfolio" />
+    <meta property="og:description" content="Welcome to my portfolio! Explore my projects, skills, and experiences. Let's connect and collaborate!" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
